modified responsive navbar height

--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
   </section>
 
   <section id="about">
-    <h1>About</h1><br/><br/>
+    <h1>About</h1>
     <p>
       Hello! My name is Farzan and I'm a front-end web developer based in Toronto, Canada. I create web experiences that mesh together functionality and design. I enjoy working on projects for businesses small and large, individuals and anyone that wants a web presence.
     </p><br/>
