--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
   <section id="projects">
 
     <h1>Project Showcase</h1>
-    <h4>Examples of my web projects</h4>
+    <h4>A collection of my web projects:</h4>
 
     <div class="projectholder">
       <a href="https://s3.amazonaws.com/tempest.com/index.html" target="_blank">
@@ -118,6 +118,7 @@
 
   <section id="about">
     <h1>About</h1>
+    <h4>What I'm about</h4>
     <p>
       Hello! My name is Farzan and I'm a front-end web developer based in Toronto, Canada. I create web experiences that mesh together functionality and design. I enjoy working on projects for businesses small and large, individuals and anyone that wants a web presence.
     </p><br/>
@@ -125,8 +126,7 @@
       I like to code and design websites and find new and creative ways to present content along with developing web applications everyone can make use of.
     </p><br/>
     <p>
-      If you're interested in creating something awesome together, then
-      feel free to get in touch with me using the info below!
+      If you're interested in creating something awesome for the web together, then feel free to get in touch with me using the info below!
     </p><br/>
 
   </section>
