--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,8 @@
   <section id="services">
 
     <div class="infobox">
-      <h1 id="servicesH1">Services</h1>
-      <h4 id="servicesH4">I code and design for the web!</h4>
+      <h1>Services</h1>
+      <h4>Coding, designing, making cool stuff!</h4>
     </div>
 
 
