colour/graphics revisions and temporarily removed navbar

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,6 @@
 
     <div id="titleholder">
       <h1>Zanform</h1>
-      <!--<h3>Front End Web Development</h3>-->
-      <br/>
       <p>Hello! My name is Farzan Ali and <br/>I code and design for the web!</p>
     </div>
 
@@ -115,9 +113,11 @@
 
     <div class="projectholder">
       <a href="https://s3.amazonaws.com/tempest.com/index.html" target="_blank">
-        <div id="projectimg1"></div><!--end of projectimg-->
-        <h3><span>Tempest Home Monitor</span></h3>
-        <p><span>A home temperature monitor made using AngularJS and Firebase.</span></p>
+        <div id="projectimg1">
+            
+        </div><!--end of projectimg-->
+        <h3>Tempest Home Monitor</h3>
+        <p>A home temperature monitor made using AngularJS and Firebase.</p>
       </a>
     </div><!--end of projectholder-->
 
